# orbitale

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  index.html  run_wasm.sh
dev_assets/: mike-petrucci-moon.xcf  stars_parallax.xcf
src/: alien_ship.rs  alien_waves.rs  background.rs  camera.rs  celestial_body.rs  collisions_handler.rs  course_planner.rs  death.rs  death_screen.rs  despawn_queue.rs  frame_pace.rs  gravity.rs  healthpoints.rs  impulses_aggregator.rs  lasers.rs  main.rs  menu.rs  player.rs  score.rs  system_sets.rs  thruster.rs  ui.rs
src/ai/: mod.rs  orientation_controller.rs  position_controller.rs
src/particles/: mod.rs  spawners.rs  thrusters.rs
src/ui/: credits_screen.rs  death_screen.rs  diagnostics.rs  entities_count.rs  healthbar.rs  menu.rs  mod.rs  radar.rs  score.rs
