[package]
name = "space_chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
bevy_rapier2d = { version = "0.23.0", features = [
    "wasm-bindgen",
    "debug-render-2d",
] }
bevy_vector_shapes = "0.6.0"
colorgrad = "0.6.2"
bevy-parallax = "0.7.0"
rand = "0.8.5"
wasm-bindgen = "0.2.89"
strum = "0.25"
strum_macros = "0.25"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
